# axum-browser-adapter

./: .gitignore  .npmignore  Cargo.toml  readme.md
example/: Cargo.toml  build.sh  index.html
example/src/: lib.rs
src/: lib.rs
