[package]
name = "axum-browser-adapter"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"
authors = ["Logan Keenan"]
description = "Adapters to easily run an Axum server compiled to WASM in the browser"
repository = "https://github.com/logankeenan/axum-browser-adapter"
license = "MIT"
keywords = ["Axum", "WASM", "browser"]

exclude = ["example"]

[dependencies]
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
futures = "0.3.28"
serde = { version = "1.0.171", features = ["derive"] }
axum = { version = "0.6.19", default-features = false }
http-body = "0.4.5"
serde-wasm-bindgen = "0.5.0"
axum-wasm-macros = "0.1.1"

[dev-dependencies]
wasm-bindgen-futures = "0.4.34"
wasm-bindgen = "0.2.84"
oneshot = "0.1.5"
axum = { version = "0.6.19", default-features = false }
tower-service = "0.3.2"