[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
axum-browser-adapter = { path = "../" }
wasm-bindgen-futures = "0.4.34"
wasm-bindgen = "0.2.84"
oneshot = "0.1.5"
axum = { version = "0.6.19", default-features = false }
tower-service = "0.3.2"